Add comments in Mongoose configuration file to explain each option, #nfc.

--- a/client/mongoose.config
+++ b/client/mongoose.config
@@ -1,4 +1,11 @@
+# Comma separated list of SSI extensions.
 ssi_extensions .src.js,.shtml
+
+# Comma-separated list of ports to listen on. For the SSL port, a letter 's' must be appeneded.
 listening_ports 3030,3033s
+
+# Location of SSL certificate file.
 ssl_certificate certs/mongoose.pem
+
+# Number of worker threads to start.
 num_threads 4
