--- a/client/system/config/mongoose.config
+++ b/client/system/config/mongoose.config
@@ -5,7 +5,7 @@ ssi_extensions .src.js,.shtml
 listening_ports 3030,3033s
 
 # Location of SSL certificate file.
-ssl_certificate certs/mongoose.pem
+ssl_certificate system/config/certs/mongoose.pem
 
 # Number of worker threads to start.
 num_threads 4
