--- a/client/system/config/mongoose.config
+++ b/client/system/config/mongoose.config
@@ -1,6 +1,9 @@
 # Comma separated list of SSI extensions.
 ssi_extensions .src.js,.shtml
 
+# Error log file, leave empty to disable logging.
+error_log_file application/logs/error_log
+
 # Comma-separated list of ports to listen on. For the SSL port, a letter 's' must be appeneded.
 listening_ports 3030,3033s
 
