Add View component and sample code.
- Add View component which delegates the heavy work to Handlebars
- Use Backbone.View to inherit delegateEvents(..)
- Rework the Login controller to use the newly available View code

--- a/client/system/config/mongoose.config
+++ b/client/system/config/mongoose.config
@@ -1,3 +1,6 @@
+# Comma separated list of SSI extensions.
+ssi_extensions .html
+
 # Error log file, leave empty to disable logging.
 error_log_file application/logs/error_log
 
