--- a/client/system/config/mongoose.config
+++ b/client/system/config/mongoose.config
@@ -1,3 +1,6 @@
+# Comma-separated list of CGI extensions. All files having these extensions are treated as CGI scripts.
+cgi_extensions .py
+
 # Comma separated list of SSI extensions.
 ssi_extensions .html
 
