Include RandExp.js to the dependencies.
Modify define.amd to be an object as RandExp expects it to be one.
This does not affect modules that were previously working,
they continue to do so.

--- a/client/Makefile
+++ b/client/Makefile
@@ -25,6 +25,9 @@ LESS_VERSION  := 1.2.2
 LESS_DOWNLOAD := https://raw.github.com/cloudhead/less.js/master/dist/less-$(LESS_VERSION).js
 LESS_PATH     := $(VENDOR_PATH)less/
 
+RANDEXP_DOWNLOAD := https://raw.github.com/fent/randexp.js/master/build/randexp.min.js
+RANDEXP_PATH     := $(VENDOR_PATH)randexp/
+
 BUNDLE_SCRIPTS := $(MODULES_PATH)core/bundles/scripts-development.js
 BUNDLE_STYLES  := $(MODULES_PATH)core/bundles/styles-development.css
 
@@ -34,7 +37,7 @@ MONGOOSE_PATH         := $(VENDOR_PATH)mongoose/
 MONGOOSE_OPTIONS      := -D'CONFIG_FILE=\"../../../config/mongoose.config\"'
 MONGOOSE_CERT_SUBJECT := /C=GB/ST=Oxfordshire/L=Oxford/O=Fake Company Ltd./OU=IT/CN=localhost
 
-.PHONY: default all install-dependencies install-script install-jquery install-bootstrap install-underscore install-backbone install-handlebars install-less bundle-dependencies bundle-component bundle-scripts bundle-styles issue-local-certificate compile-local-server start-local-server
+.PHONY: default all install-dependencies install-script install-jquery install-bootstrap install-underscore install-backbone install-handlebars install-less install-randexp bundle-dependencies bundle-component bundle-scripts bundle-styles issue-local-certificate compile-local-server start-local-server
 
 default:
 	@echo "No default $(MAKE) target configured."
@@ -42,7 +45,7 @@ default:
 
 all: install-dependencies bundle-dependencies compile-local-server
 
-install-dependencies: install-jquery install-bootstrap install-underscore install-backbone install-handlebars install-less
+install-dependencies: install-jquery install-bootstrap install-underscore install-backbone install-handlebars install-less install-randexp
 
 install-script:
 	@mkdir -p "$($(SCRIPT)_PATH)"
@@ -90,6 +93,9 @@ install-handlebars:
 install-less:
 	@$(MAKE) install-script SCRIPT=LESS
 
+install-randexp:
+	@$(MAKE) install-script SCRIPT=RANDEXP
+
 bundle-dependencies: bundle-scripts bundle-styles
 	@echo "Bundles created successfully."
 
@@ -105,7 +111,7 @@ bundle-component:
 bundle-scripts:
 	@$(MAKE) bundle-component \
 		COMPONENT=SCRIPTS \
-		DEPENDENCIES='"$(JQUERY_PATH)$(shell basename $(JQUERY_DOWNLOAD))" "$(BOOTSTRAP_PATH)scripts/bootstrap.js" "$(UNDERSCORE_PATH)$(shell basename $(UNDERSCORE_DOWNLOAD))" "$(BACKBONE_PATH)$(shell basename $(BACKBONE_DOWNLOAD))" "$(HANDLEBARS_PATH)$(shell basename $(HANDLEBARS_DOWNLOAD))" "$(LESS_PATH)$(shell basename $(LESS_DOWNLOAD))"'
+		DEPENDENCIES='"$(JQUERY_PATH)$(shell basename $(JQUERY_DOWNLOAD))" "$(BOOTSTRAP_PATH)scripts/bootstrap.js" "$(UNDERSCORE_PATH)$(shell basename $(UNDERSCORE_DOWNLOAD))" "$(BACKBONE_PATH)$(shell basename $(BACKBONE_DOWNLOAD))" "$(HANDLEBARS_PATH)$(shell basename $(HANDLEBARS_DOWNLOAD))" "$(LESS_PATH)$(shell basename $(LESS_DOWNLOAD))" "$(RANDEXP_PATH)$(shell basename $(RANDEXP_DOWNLOAD))"'
 
 bundle-styles:
 	@$(MAKE) bundle-component \
